# controlkit

./: .gitignore  README.md  design_decisions.md  pyproject.toml  roadmap.md
benchmarks/cartpole_lqr_linearized/: controller.yaml  expected_results.md  model.py  problem.md  run_benchmark.py
benchmarks/double_integrator_lqr/: controller.yaml  expected_results.md  model.py  problem.md
benchmarks/pid_mass_spring_damper/: controller.yaml  expected_results.md  model.py  problem.md
benchmarks/rocket_hover_lqr/: controller.yaml  expected_results.md  model.py  problem.md
blog/: controlkit_v1.md
docs/: architecture_diagram.md  benchmark_summary.md  benchmarks.md  compiler_architecture.md  controlkit_v1_improvements.md  demo_walkthrough.md  index.md  verification.md
examples/: benchmark_lqr.py  c_backend_lqr.py  ir_lqr_feedback.py  lqr_cartpole.yaml  lqr_frontend.py  mpc_temperature.yaml  optimization_pass.py  pid_basic.yaml  rl_balance.yaml  rl_balance_weights.json  rust_backend_lqr.py
src/controlkit/: __init__.py  __main__.py  cli.py  exceptions.py
src/controlkit/backends/: __init__.py  c.py  rust.py  rust_test.py
src/controlkit/benchmarks/: __init__.py  metrics.py  reporting.py  (+1 more)
tests/: test_benchmarks.py  test_c_backend.py  test_cli.py  test_interfaces.py  test_ir.py  test_lqr_frontend.py  test_mpc_frontend.py  test_optimization.py  test_rl_frontend.py  test_rust_backend.py  test_verify_constraints.py  test_verify_dimensions.py  test_verify_numerical.py  test_verify_report.py  test_verify_stability.py
website/: index.html  styles.css  syntax.js  theme.js
(+23 files in other folders)
